--- a/style.css
+++ b/style.css
@@ -24,6 +24,98 @@
         padding: 0;
         font-size: var(--base-size);
         line-height: 1.5;
-        /* background-color: var(--black); */
+        background-color: var(--black);
+    }
+    p {
+        color: var(--white);
+    }
+    ul {
+        color: var(--white);
+        list-style-type: none;
+    }
+    li {
+        padding-top: 2rem;
+    }
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        font-family: var(--heading);
+        text-transform: uppercase;
+        color: var(--white);
+    }
+    h1 {
+        font-size: var(--h1);
+    }
+    h2 {
+		font-size: var(--h2);
+	}
+	h3 {
+		font-size: var(--h3);
+	}
+	h4 {
+		font-size: var(--h4);
+	}
+	h5 {
+		font-size: var(--h5);
+	}
+	h6 {
+		font-size: var(--h6);
+	}
+    a {
+        color: var(--pink)
+    }
+    a:hover {
+        text-decoration: none;
+        color: var(--blue);
+    }
+    img {
+        max-width: 100%;
+    }
+    figure {
+        padding: 0;
+        margin: 0;
+    }
+    .container {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 0 1rem;
+    }
+}
+@layer header {
+    header {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-between;
+        align-items: baseline;
+        padding: 2rem;
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+}
+@layer footer {
+    footer {
+        text-align: center;
+        font-family: var(--body);
+        padding: 4rem 0;
+        color: var(--pink);
+    }
+    footer img {
+        width: 20px;
+    }
+    footer ul {
+        list-style-type: none;
+        padding: 0;
+        margin: 2rem 0;
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        gap: 3rem;
+        font-size: 3rem;
+    }
+    footer p {
+        color: var(--pink);
     }
 }
