--- a/style.css
+++ b/style.css
@@ -24,7 +24,19 @@
         padding: 0;
         font-size: var(--base-size);
         line-height: 1.5;
-        background-color: var(--black);
+        /* Background image and gradient overlay */
+        background: 
+        /* linear-gradient(to bottom, rgba(42, 75, 130, 0.8), rgba(130, 169, 212, 0.5), rgba(255, 255, 255, 0.8)), */
+        url('img/Freedom_One.PNG/');
+
+        /* Background settings */
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+
+        /* Full screen size */
+        height: 100vh;
+        margin: 0;
     }
     p {
         color: var(--white);
