--- a/style.css
+++ b/style.css
@@ -24,21 +24,20 @@
         padding: 0;
         font-size: var(--base-size);
         line-height: 1.5;
+        background-color: var(--black)
         /* Background image and gradient overlay */
-        background: 
+        /* background: 
         /* linear-gradient(to bottom, rgba(43, 57, 144, 0.8), rgba(36, 131, 197, 0.5), rgba(41, 180, 115, 0.8)),*/
-        url('img/Freedom_One.PNG/');
+        /* url('img/Freedom_One.PNG/'); */
 
         /* Background settings */
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
+        /* background-size: cover; */
+        /* background-position: center; */
+        /* background-repeat: no-repeat; */
 
         /* Full screen size */
-        height: 100vh;
-        margin: 0;
-
-
+        /* height: 100vh; */
+        /* margin: 0; */
     }
     p {
         color: var(--white);
@@ -341,10 +340,16 @@ nav li {
     .welcome img {
         border-radius: 40px;
     }
-    .welcome p {
+    .WHeader p {
+        font-family: 'Courier New', Courier, monospace;
+        text-align: center;
         color: var(--blue);
     }
     .WHeader h2 {
+        text-align: center;
+        color: var(--blue);
+    }
+    .WHeader h3 {
         text-align: center;
         color: var(--blue);
     }
