--- a/style.css
+++ b/style.css
@@ -24,19 +24,12 @@
         padding: 0;
         font-size: var(--base-size);
         line-height: 1.5;
-        /* background-color: var(--black) */
-        /* Background image and gradient overlay */
-        background: 
-        /* linear-gradient(to bottom, rgba(43, 57, 144, 0.8), rgba(36, 131, 197, 0.5), rgba(41, 180, 115, 0.8)), */
-        url('img/Freedom_One.PNG/');
-
-        /* Background settings */
+        background: url('img/Freedom_One.PNG/');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-
-        
-        height: 100vh;
+        background-attachment: fixed;
+        min-height: 100vh;
         margin: 0;
     }
     p {
