--- a/style.css
+++ b/style.css
@@ -24,11 +24,7 @@
         padding: 0;
         font-size: var(--base-size);
         line-height: 1.5;
-        background: url('img/Freedom_One.PNG/');
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-attachment: fixed;
+        background: var(--black);
         min-height: 100vh;
         margin: 0;
     }
