--- a/style.css
+++ b/style.css
@@ -24,8 +24,12 @@
         padding: 0;
         font-size: var(--base-size);
         line-height: 1.5;
-        background: var(--black);
-        min-height: 100vh;
+        background: url('img/Freedom_One.PNG/');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-attachment: fixed;  /* This is key - keeps bg fixed while scrolling */
+        min-height: 100vh;  /* Minimum height of 100% of viewport */
         margin: 0;
     }
     p {
