--- a/style.css
+++ b/style.css
@@ -98,6 +98,8 @@
         padding: 1rem;
     }
     header h1 {
+        font-family: var(--heading);
+        font-weight: 600;
         margin: 0;
         padding: 0 2rem;
         display: flex;
