--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@
     header h1 {
         font-family: var(--heading);
         font-weight: 600;
+        font-size: 2rem;
         margin: 0;
         padding: 0 2rem;
         display: flex;
