--- a/style.css
+++ b/style.css
@@ -353,6 +353,8 @@ nav li {
     }
 
     .about p {
+        color: var(--darkBlue);
+        text-align: center;
         line-height: 1.6;
         margin-bottom: 1.5rem;
     }
