--- a/style.css
+++ b/style.css
@@ -618,6 +618,15 @@ nav li {
         font-weight: 600;
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
     }
+    .About-Vatsim-Controlling p {
+        font-family: var(--body);
+        font-size: 1.2rem;
+        line-height: 1.5;
+        margin-bottom: 1.5rem;
+        color: var(--darkBlue);
+        text-align: center;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+    }
     .gallery-grid {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
