--- a/style.css
+++ b/style.css
@@ -625,7 +625,7 @@ nav li {
         font-weight: 600;
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
     }
-    .About-Vatsim-Controlling h3 {
+    .vatsim-text h3 {
         text-align: center;
         color: var(--darkBlue);
         margin: 0;
