--- a/style.css
+++ b/style.css
@@ -658,6 +658,7 @@ nav li {
     }
     .Vatsim-Pilot h3 {
         border: 2px solid var(--black);
+        border-radius: 40px;
         padding: 1rem;
         background-color: var(--black);
         display: inline-block;
