--- a/style.css
+++ b/style.css
@@ -650,11 +650,16 @@ nav li {
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
     }
     .Vatsim-Pilot h2 {
+        border: 2px solid var(--black);
+        border-radius: 40px;
+        padding: 1rem;
+        background-color: var(--black);
         text-align: center;
         color: var(--darkBlue);
         margin: 0;
         font-weight: 600;
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+        opacity: 0.8;
     }
     .Vatsim-Pilot h3 {
         border: 2px solid var(--black);
