--- a/style.css
+++ b/style.css
@@ -674,7 +674,7 @@ nav li {
         background-color: var(--black);
         text-align: center;
         color: var(--red);
-        margin: 0;
+        margin: 0 0 1rem 0;
         font-weight: 600;
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
         opacity: 0.8; /* Added opacity */
