--- a/style.css
+++ b/style.css
@@ -634,7 +634,7 @@ nav li {
     }
     .vatsim-text h2 {
         text-align: center;
-        color: var(--red);
+        color: var(--darkBlue);
         margin: 0;
         font-weight: 600;
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
