--- a/style.css
+++ b/style.css
@@ -640,8 +640,10 @@ nav li {
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     }
     .vatsim-text h3 {
+        border: 2px solid var(--darkBlue);
+        border-radius: 40px;
         text-align: center;
-        color: var(--red);
+        color: var(--darkBlue);
         margin: 0;
         font-weight: 600;
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
