--- a/style.css
+++ b/style.css
@@ -619,11 +619,17 @@ nav li {
         opacity: 0.8; /* Added opacity */
     }
     .Vatsim-Controlling li {
+        border: 2px solid var(--darkBlue);
+        border-radius: 40px;
+        padding: 1rem;
+        background-color: var(--black);
         text-align: center;
         color: var(--pink);
         font-family: var(--heading);
+        margin: 0 0 1rem 0;
         font-weight: 600;
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+        opacity: 0.8;
     }
     .About-Vatsim-Controlling h2 {
         text-align: center;
