--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 		--lightPink: #f2c9d4;
 		--pink: #f5a9b8;
         --red: #ff0000;
+        --twitchpurple: #a970ff;
         --main: "MoMontserrat", sans-serif;
         --heading: "EB Garamond", serif;
 		--base-size: 1.167rem;
@@ -815,5 +816,27 @@ nav li {
 
     .grid figcaption:hover {
         transform: scale(1.1);
+    }
+}
+@layer Streaming {
+    .support-me  p{
+        color: var(--twitchpurple);
+        text-align: left;
+        font-family: var(--heading);
+    }
+
+    .support-me h1 {
+        color: var(--twitchpurple);
+        text-align: left;
+        font-family: var(--heading)
+    }
+    .support-me img {
+        
+    }
+
+    @media (max-width: 768px) {
+        .support-me img {
+            max-width: 100%;
+        }
     }
 }
