--- a/style.css
+++ b/style.css
@@ -821,16 +821,13 @@ nav li {
     }
 }
 @layer Streaming {
-        .subscriber_badges h2 {
-            border: 2px solid var(--red);
-            border-radius: 40px;
-            padding: 1rem;
-            background-color: var(--black);
-            text-align: center;
-            color: var(--red);
-            margin: 0 0 1rem 0; /* Adds space below the border */
-            font-weight: 600;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-            opacity: 0.8; /* Added opacity */
-        }
+    .subscriber_badges img {
+        vertical-align: top;
+        width: 112px;
+        height: 112px;
+    }
+    .First-Month_Badge span {
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        color: var(--twitchpurple);
+    }
 }
