--- a/style.css
+++ b/style.css
@@ -821,13 +821,14 @@ nav li {
     }
 }
 @layer Streaming {
-    .subscriber_badges img {
-        vertical-align: top;
-        width: 112px;
-        height: 112px;
-    }
-    .First-Month_Badge span {
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    .subscriber_badges h2 {
         color: var(--twitchpurple);
+    }
+    
+    .badge_images img {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        height: 112px;
+        width: 112px;
     }
 }
