--- a/style.css
+++ b/style.css
@@ -823,12 +823,32 @@ nav li {
 @layer Streaming {
     .subscriber_badges h2 {
         color: var(--twitchpurple);
+        text-align: center;
+        margin-bottom: 20px;
     }
-    
+
+    .badge_images {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 20px;
+    }
+
+    .badge_images div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
     .badge_images img {
-        display: inline-flex;
-        margin-right: 20px;
         height: 112px;
         width: 112px;
+    }
+
+    .badge_images span {
+        margin-top: 5px;
+        font-size: 16px;
+        color: white;
     }
 }
